--- a/docs/07.收藏夹/02.转载/01.网站.md
+++ b/docs/07.收藏夹/02.转载/01.网站.md
@@ -10,6 +10,8 @@ author:
 # 个人收藏夹
 
 ## 推荐
+* [ Evan's blog](https://xugaoyi.com/web/) 
+* [vdoing](https://doc.xugaoyi.com/pages/db78e2/#%E5%9B%BE%E6%A0%87-%E9%85%8D%E5%9B%BE) 主题配置
 * [panjiachen](https://panjiachen.github.io/awesome-bookmarks/) by 花裤衩
 * [编程导航](https://www.code-nav.cn/) by 程序员鱼皮
 * [编程自学之路](https://r2coding.com/) by 程序羊
