--- a/docs/00.目录页/04.写过的项目.md
+++ b/docs/00.目录页/04.写过的项目.md
@@ -2,12 +2,12 @@
 pageComponent:
   name: Catalogue
   data:
-    key: 07.测试
-    imgUrl: /img/web.png
-    description: JavaScript、ES6、Vue框架等前端技术
-title: 测试
+    key: 04.写过的项目
+    imgUrl: 
+    description: 写过的项目
+title: 写过的项目
 date: 2020-03-11 21:50:53
-permalink: /test/
+permalink: /code/
 sidebar: false
 article: false
 comment: false
