--- a/docs/01.前端/01.原创/01.ES6.md
+++ b/docs/01.前端/01.原创/01.ES6.md
@@ -2,10 +2,10 @@
 pageComponent:
   name: Catalogue
   data:
-    path: 《ES6》学习笔记(原创)
+    path: 555+ES6(原创)
     imgUrl: https://cdn.jsdelivr.net/gh/xugaoyi/image_store/blog/20200112160453.png
     description: 本章内容为在原教程基础上添加的学习笔记，教程版权归原作者所有。来源：<a href='https://es6.ruanyifeng.com/' target='_blank'>ES6教程</a>
-title: 《ES6》学习笔记
+title: ES6
 date: 2020-01-12 15:49:22
 permalink: /note/es6555/
 article: false
