--- a/docs/05.更多/01.原创/01.你好，旧时光/01.张一鸣近10年微博精编版，每个渴望成长的人都该看看（建议收藏）.md
+++ b/docs/05.更多/01.原创/01.你好，旧时光/01.张一鸣近10年微博精编版，每个渴望成长的人都该看看（建议收藏）.md
@@ -16,48 +16,47 @@ author:
 ---
 
 
-本文是从字节跳动创始人张一鸣微博中摘录的231句话，关于生活. 成长. 思维. 沟通. 延迟满足感. 商业. 管理等7大关键词，文章17000字，预计44分钟读完，相信你会有收获。
-这几天抽空把张一鸣的所有微博看了一遍，发现2010年的微博最好，就是他30岁左右的时候，那时候刚创业没多久，在微博上认真分享自己的思考和观点。
-到了2012年附近，开始做今日头条，每天都是大量转发今日头条上的文章到微博，干货变少了。后面就更新得越来越少。
-我从他的微博中，试图找到他成功的钥匙，得到了一些只言片语，但是仅仅是这些只言片语，我都觉得对我的启发很大。
-他从南开大学毕业，妻子是大学同学，毕业后去过微软，后来从微软离职，然后去过饭否，应该跟过王兴王慧文一阵子，后来还是自己创业。
-刚开始项目是99房，类似于安居客或者贝壳找房这样的模式吧，后来才是字节跳动，今日头条，他很早就认准移动互联网红利，很早就认准信息的聚合和推荐的价值。
-有这样的认知，做出今日头条也不诧异。做今日头条的时候发现用户更喜欢看短视频，于是专门起一个APP做短视频分发，抖音就是这么来的，也不奇怪。
-围观他的微博，我整理了这些干货。发现他说得最多的关键词：延迟满足感，自控，理性，反省，创新，学习。
-结论就是张一鸣真的太厉害了。我对他做过的事情，他也对马化腾做过，他把马化腾的所有微博都读了一遍，连发两条微博感叹马化腾。
-本文是我从他微博中摘录的231句话，绝大多数都是他创业初期的思考，我们可以看下10年前的想创业的程序员在想什么，在思考什么，是怎么鞭策自己的。
+**`本文是从字节跳动创始人张一鸣微博中摘录的231句话`**，**`关于生活. 成长. 思维. 沟通. 延迟满足感. 商业. 管理等7大关键词`**，文章17000字，**`预计44分钟读完`**，**`相信你会有收获。`**
+这几天抽空把张一鸣的所有微博看了一遍， **`发现2010年的微博最好，就是他30岁左右的时候，那时候刚创业没多久，在微博上认真分享自己的思考和观点。`**
+**`到了2012年附近，开始做今日头条，每天都是大量转发今日头条上的文章到微博，干货变少了。后面就更新得越来越少。`**
+**`我从他的微博中，试图找到他成功的钥匙，得到了一些只言片语，但是仅仅是这些只言片语，我都觉得对我的启发很大。`**
+他从**`南开大学`**毕业，妻子是大学同学，毕业后去过 **`微软`**，后来从 **`微软`** 离职，然后去过 **`饭否`**，应该跟过王兴王慧文一阵子，后来还是自己 **`创业`**。
+**`刚开始项目是99房`**，类似于安居客或者贝壳找房这样的模式吧， **`后来才是字节跳动，今日头条，他很早就认准移动互联网红利，很早就认准信息的聚合和推荐的价值。`**
+**`有这样的认知，做出今日头条也不诧异。做今日头条的时候发现用户更喜欢看短视频，于是专门起一个APP做短视频分发，抖音就是这么来的，也不奇怪。`**
+**`围观他的微博，我整理了这些干货。发现他说得最多的关键词：延迟满足感，自控，理性，反省，创新，学习。`**
+**`结论就是张一鸣真的太厉害了。我对他做过的事情，他也对马化腾做过，他把马化腾的所有微博都读了一遍，连发两条微博感叹马化腾。`**
+**`本文是我从他微博中摘录的231句话，绝大多数都是他创业初期的思考，我们可以看下10年前的想创业的程序员在想什么，在思考什么，是怎么鞭策自己的。`**
 ## :blue_heart:关于成长
 1. 人常会不自觉地记下对自己有利的部分，这是形成委屈的重要原因。
-2. 做不好的就别做了，要做就必须做到非常好。
-3. 有感：人生的差距就是在自我感觉良好中拉开的 ——与朋友共诫勉。
+2. **`做不好的就别做了，要做就必须做到非常好`**。
+3. 有感：**`人生的差距就是在自我感觉良好中拉开的`** ——与朋友共诫勉。
 4. 经验：但无法选择或判断的时候，离远一步，远道用更重要的原则和更长的时间尺度来衡量就清楚了。
-5. 练习保持耐心，即使是快节奏和压力的情况下。
-6. 今天听王兴演讲的的比喻：人生，和谁一起在路上，看什么风景。
+5. **`练习保持耐心，即使是快节奏和压力的情况下`**。
+6. 今天听王兴演讲的的比喻：**`人生，和谁一起在路上，看什么风景。`**
 我最近也是在想，以后要让小孩多看看传记，包括电视剧《阿信》那样的也可以，看看别人的风景和旅程，更容易想清楚自己的选择。
-7. 应该让肾上腺素和理智一起发挥作用。
-8. 谋事不求易成，具备强烈的成功动机和韧性才能成功。
-9. 参考别人的意见，只是判断线索，不可作为决定的决心。
-10. 与智慧的常见敌人：未延迟的满足感，经验带来的麻痹或恐惧。
-11. 年轻人不要试图追求安全感，特别是年轻的时候，周遭环境从来都不会有绝对的安全感，如果你觉得安全了，很有可能开始暗藏危机。
-真正的安全感， 来自你对自己的信心，是你每个阶段性目标的实现，而真正的归属感，在于你的内心深处，对自己命运的把控，因为你最大的对手永远是自己。
-12. 如果给过去5年的自己一个建议，就是激进再激进一点。
-13. 你最终会成为你想要的样子——如果你真的非常想。虽然听起来有点违心，但是强大的愿望确实非常重要。
+7. **`应该让肾上腺素和理智一起发挥作用`**。
+8. **`谋事不求易成，具备强烈的成功动机和韧性才能成功`**。
+9. **`参考别人的意见，只是判断线索，不可作为决定的决心。`**
+10. **`与智慧的常见敌人：未延迟的满足感，经验带来的麻痹或恐惧。`**
+11. **`年轻人不要试图追求安全感，特别是年轻的时候，周遭环境从来都不会有绝对的安全感，如果你觉得安全了，很有可能开始暗藏危机。`**
+**`真正的安全感， 来自你对自己的信心，是你每个阶段性目标的实现，而真正的归属感，在于你的内心深处，对自己命运的把控，因为你最大的对手永远是自己。`**
+12. **`如果给过去5年的自己一个建议，就是激进再激进一点。`**
+13. **`你最终会成为你想要的样子——如果你真的非常想。虽然听起来有点违心，但是强大的愿望确实非常重要。`**
 14. 卓有成效如果有什么秘诀的话，那就是善于集中精力——《卓有成效的管理》
-15. 加强专注力训练，它是优先级管理的保证，同时持续专注力的一个基础是体力和精力，锻炼修炼。
+15. **`加强专注力训练，它是优先级管理的保证，同时持续专注力的一个基础是体力和精力，锻炼修炼。`**
 16. 发现保持体力充沛精力旺盛是一项基础工作。
 17. 某项较长时间不如人意的工作，终于有了起色，耐心很重要。凡事都有原因，只要认真找原因并努力改进，就会有效果。
-18. 上午北京大学周其仁教授发言非常精彩。他认为一个持久得到别人信任的人，收入就越高。
-有比知识. 技能更加重要的东西，那就是信任。
-他们的团队在研究了农民工的收入以后发现，收入最高的人，往往并不是体力最好. 技能最好，而是最受信任的人。所以，成为一个受人信任的人，非常重要。
+18. 上午北京大学周其仁教授发言非常精彩。**`他认为一个持久得到别人信任的人，收入就越高。`**
+**`有比知识. 技能更加重要的东西，那就是信任。`** **`他们的团队在研究了农民工的收入以后发现，收入最高的人，往往并不是体力最好. 技能最好，而是最受信任的人。所以，成为一个受人信任的人，非常重要。`**
 19. 将事情做满，还是将事情做好，其实是很不一样的。我们容易看到将事情做满，但是容易忽略把事情做好。
-20. 指标系统：为什么刷牙不能坚持认真刷，为什么在跑步机上能坚持跑步。有许多事情不容易做好和不被重视的原因就是因为没有指标系统。
+20. **`指标系统`**：为什么刷牙不能坚持认真刷，为什么在跑步机上能坚持跑步。**`有许多事情不容易做好和不被重视的原因就是因为没有指标系统。`**
 比如，如果健康有准确方便度量的指标，那么大家的身体素质一定会提高。
 但是指标不见得好提炼，提炼指标的过程，本身是分解事物特征的过程。而且指标要常测量。
 比如说：当我今天发现眼睛度数上升100度的时候，才发现眼睛过疲劳了，用眼不注意了，在手机上看书是非常不恰当的行为。关键是今天才知道哇……
 21. 我去年自己有一个敢想：觉得之前的老板都对我不太苛刻啊。否则我当时能做的更好。
 当然很可能是他们认为，已经做的好，太苛刻人就跑了，其实对于会自我驱动的人是不会的。
-22. 有人问比尔盖茨：什么是你最大的恐惧？盖茨回答：我最恐惧的是那些正在破车库里没日没夜捣鼓新名堂的年轻人。
-23. 人不逼一下自己，永远不知道自己潜力有多大。很多事情非不能也，是不为也。
+22. **`有人问比尔盖茨：什么是你最大的恐惧？盖茨回答：我最恐惧的是那些正在破车库里没日没夜捣鼓新名堂的年轻人。`**
+23. **`人不逼一下自己，永远不知道自己潜力有多大。很多事情非不能也，是不为也。`**
 24. 乔布斯说stay hungry，我以为饥渴有三个层次：贪婪. 成就动机. 好奇心 。
 三者分别关注：瞬间的结果，持续的过程，和远大的未知。三者也恰好对应了三种人：卑劣的投机者，艰辛的攀登者，与幸福的探索者。
 25. 发现最近，不论是一起公司的同事，或是投资人，还是老同学都不约而同提到一点：
@@ -65,36 +64,36 @@ author:
 26. 今天M.A.D会议，听到一个关于SEO人物介绍，提到某人非常洒脱。我对人物介绍倒没有感觉到特别。
 但是对洒脱这个词，突然有点感想。效率和竞争往往把人变得很精确. 严谨. 注重细节. 强调计划和控制，这些都没错，但是大家要注意保留一份洒脱，性格和人生观别职业带入另一个胡同。
 27. 应届生应该推崇自信，诚实，努力，相信成功可通过学习和努力获得。别太讨巧，走捷径。事实上面试大多不是因为技能不行，而是人品和性格不行。
-28. 有百分之多少的把握你会开始创业，有多深的感觉你会对另外一个人说我爱你，有多么的确信会让你有精神上的信仰。
-你不必等一切都100%确定了才开始创业，去爱一个人和建立信仰。其实我们的确信度永远达不到100%，那么你会一直等吗？今天，你如果不做一个肯定的决定可能会失去得更多。
+28. **`有百分之多少的把握你会开始创业，有多深的感觉你会对另外一个人说我爱你，有多么的确信会让你有精神上的信仰。`**
+**`你不必等一切都100%确定了才开始创业，去爱一个人和建立信仰。其实我们的确信度永远达不到100%，那么你会一直等吗？今天，你如果不做一个肯定的决定可能会失去得更多。`**
 29. 一个困扰我们很长的时间技术诡异问题，同事们这两天集中时间集中精力分析. 求助. 排查. 尝试终于解决。
 想起稻盛和夫说的：用尽全力，异常认真，神明就会来相助。其实神明未必相助，但是你会更接近问题的本质，从而解决问题。
-30. 快到30岁了，感觉这几年又再重新学习/补习本应在青少年时间学习的东西：
-如何阅读. 如何了解自己. 如何与人沟通沟通. 如何安排时间. 如何正确的看待别人意见. 如何激励自己. 如何写作. 如何坚持锻炼身体. 如何耐心……
+30. **`快到30岁了，感觉这几年又再重新学习/补习本应在青少年时间学习的东西：`**
+**`如何阅读. 如何了解自己. 如何与人沟通沟通. 如何安排时间. 如何正确的看待别人意见. 如何激励自己. 如何写作. 如何坚持锻炼身体. 如何耐心……`**
 31. 互联网让会学习爱学习的人和相反的差距拉的更大，这并不仅限于互联网行业。只不过互联网行业这种趋势先开始而已。
 现在好多初中生. 高中生比大学生. 博士生还博学。我见过2个中学生，自己用wiki整理所学过的，自学的各种知识。我怎么生的这么早......
 32. 昨天公司内部做时间管理的交流，是我推动大家的。不过说实话惭愧，最近2. 3周我自己时间管理的目标下降了。惰性是万恶之源。从今天开始又有意识地加强了。
 33. 今天早点睡，明天早上起来看书。本周的学习计划快完不成了。创业过程中不断的学习又能尝试是感觉很好的体验。
-34. 关于勤奋，就我所知，罕有成功者不是工作时间极长的：通用电气的CEO每周工作一百小时，坚持了至少十年。
-巴菲特为了最早看到次日的华尔街日报，经常在凌晨四点去取报纸。勤奋不是一种形式，而是一种心理状态：享受挑战极限的过程，保持热情和好奇心，坚持不屑。
-35. 哈佛有一个著名的理论：人的差别在于业余时间，而一个人的命运决定于晚8点到10点之间。
-每晚抽出2个小时的时间用来阅读. 进修. 思考或参加有意的演讲. 讨论，你会发现，你的人生正在发生改变，坚持数年之后，成功会向你招手。
+34. **`关于勤奋`**，**`就我所知，罕有成功者不是工作时间极长的：通用电气的CEO每周工作一百小时，坚持了至少十年。`**
+**`巴菲特为了最早看到次日的华尔街日报，经常在凌晨四点去取报纸。勤奋不是一种形式，而是一种心理状态：享受挑战极限的过程，保持热情和好奇心，坚持不屑。`**
+35. **`哈佛有一个著名的理论：人的差别在于业余时间，而一个人的命运决定于晚8点到10点之间。`**
+**`每晚抽出2个小时的时间用来阅读. 进修. 思考或参加有意的演讲. 讨论，你会发现，你的人生正在发生改变，坚持数年之后，成功会向你招手。`**
 36. 最近重读到稻盛和夫的《活法》，其中提到专注投入，其中举的陶瓷工艺改进的例子尤其令我印象深刻。
 我们做每一件事（写一段程序，写一封邮件，写一个策划）的时候是否在想自己是否投入全力以赴地认真做了，结果真的不一样？请试试：你能有多专注？
 ## :yellow_heart:关于思维
 1. 看缺点有难度，权衡缺点看优点更难；避免犯错有难度，接受犯错以成功更难。
-2. 选择比努力更重要，观念比选择更重要。
+2. **`选择比努力更重要，观念比选择更重要。`**
 3. 稻盛要辞职离开快倒闭的公司，遭兄长棒喝：“在这样没人干活的公司你都做不出点成绩来，你还能干什么？”
 洛克菲勒感觉再也无法忍受日复一日枯燥的工作，提出换岗，遭主管冷言“要么好好干. 要么另谋出路”。
 同样的道理，不同的说法，却像雷一样击中并成就了两个商业巨匠。还是那句，不抱怨. 想方法。
 4. “独立思考忠实于自己的内心”“越朴素不虚荣所做出的选择会越实际而可行” 。
-5. 研究聪明人如何犯错误，回报率很高。聪明人易犯错误包括：
-01. 嫉妒他人成功；
-02. 自命不凡；
-03. 过于相信自己判断；
-04. 停止学习；
-05. 认为世界是静止的，生活在过去荣耀中；
-06. 任何事情都有自己一套言之有据. 且深信不疑的说法和理论，忘记了没有调查研究，就没有发言权。
+5. **`研究聪明人如何犯错误，回报率很高。`** 聪明人易犯错误包括：
++ 嫉妒他人成功；
++ 自命不凡；
++ 过于相信自己判断；
++ 停止学习；
++ 认为世界是静止的，生活在过去荣耀中；
++ 任何事情都有自己一套言之有据. 且深信不疑的说法和理论，忘记了没有调查研究，就没有发言权。
 你符合吗？
 6. 坚持原则很多时候是经济的，可以看做是一种短期浮亏的长期受益的投资。
 7. 知行合一真难，中间差的是什么？
@@ -109,137 +108,138 @@ author:
 14. 寻找错误或者问题可以从发现自我矛盾点做起，如果能理性地使用逻辑。
 15. 注意力也可以开源节流的，欲望和杂念分散注意力要节流，锻炼身体和注意力训练是开源。
 16. 我最近经常问自己：马上有什么可行动，你是行动派吗？
-很多问题它不会消失，不动（犹豫/抱怨/感叹）肯定是错误，行动就有力量，哪怕是行动的准备行动，唯有行动才能改变事情。
-17. 好的问题就是一半的的答案。
+很多问题它不会消失，不动（犹豫/抱怨/感叹）肯定是错误，行动就有力量，哪怕是行动的准备行动，**`唯有行动才能改变事情`**。
+17. **`好的问题就是一半的的答案`**。
 18. 想学的东西很多，吾生有涯知无涯，以有涯追无涯，殆也。有两种理解，积极的理解是应该有优先级的规划学习。
 19. 做减法最不容易也最容易。
 20. 很多很好的想法自己都非常认真，现在都被人实现或者通往实现的路上了。
 真希望自己能分身体几个同时努力，这样人生多精确。但是分身是不可能的，所以只能 :
-01. 根据情况排优先级
-02. 找到志同道合的人
++ 根据情况排优先级
++ 找到志同道合的人
 21. 最近IPO的公司一堆一堆的，但是大家一定要耐得住寂寞，他们今天的成功是他们的过去已经决定的，属于他们。
 我们的成功是我们的现在和将来决定的。我发现很多事情经常是这样的：今天和明天已经由昨天决定，你还可以决定后天。
 22. 一连串有想象力且恰当的比喻连续使用是讲道理的好方法。
-23. 执行力到底是什么？我认为的执行力是：说到做到，不找借口，完成别人都能完成的事。
-而更强的人可以做到：完成别人完不成的事。同样的一件事，交给不同的员工，会有不同的结果，完不成的人都会有各种理由来说服自己说服领导，将 一个小困难由点到面扩大化看待。做一个NB的人，从此刻开始，不再找借口。
+23. **`执行力到底是什么？`** **`我认为的执行力是：说到做到，不找借口，完成别人都能完成的事。`**
+**`而更强的人可以做到：完成别人完不成的事。同样的一件事，交给不同的员工，会有不同的结果，完不成的人都会有各种理由来说服自己说服领导，将 一个小困难由点到面扩大化看待。做一个NB的人，从此刻开始，不再找借口。`**
 24. 向成功找方法和为失败找理由也是人的一个方面的两种习惯和素质。
 25. 一个人在他的信仰上站得越不牢固，他就越要用双臂紧紧抱住那些使之区分于其他信仰的教条不放；相反，一个人在他的信念上站得越牢固，他就越可以自由地把双手伸向那些与他信仰不同的人。——弗兰克
-26. 说到自我修炼，由于懒惰（体力的. 思考的. 情绪的）是万恶之源，所以修炼很多时候就是在克服惰性。
+26. **`说到自我修炼，由于懒惰（体力的. 思考的. 情绪的）是万恶之源，所以修炼很多时候就是在克服惰性。`**
 27. 不断给自己小的承诺并努力达到。Be Proactive的修炼方法之一。
-28. 平庸有重力，需要逃逸速度。
+28. **`平庸有重力，需要逃逸速度。`**
 29. 未雨绸缪其实很难的，大多数情况都是事情推人走，而且往往能容易被推动的人已经不错了。
-30. 当某人开始深入认识自己. 研究自己的时候，说明此人开始有了哲学的思考，预示着此人开始迈入一个新的人生阶段。
-31. 非常同意自控力（也就是反惰性）是优秀的标准。确实马拉松不是高标准，思维意识情绪的自控更难。
-32. 牛逼的人找方法，傻逼的人找借口。
-33. 只有当你离开自己的舒适区时，你才会挑战自己的极限。
-34. “积极主动”是广泛优秀的素质的基础。
+30. **`当某人开始深入认识自己. 研究自己的时候，说明此人开始有了哲学的思考，预示着此人开始迈入一个新的人生阶段。`**
+31.**`非常同意自控力（也就是反惰性）是优秀的标准。确实马拉松不是高标准，思维意识情绪的自控更难。`**
+32. **`牛逼的人找方法，傻逼的人找借口。`**
+33. **`只有当你离开自己的舒适区时，你才会挑战自己的极限。`**
+34. **`“积极主动”是广泛优秀的素质的基础。`**
 35. 看年轻人的潜力，看他周末几点起，周末在干嘛，下班在干嘛。甚至不一定要干嘛，只要看想些什么。
 36. 高中刚开始学物理的时候，老师反复强调不要想当然. 凭感觉，应该要推理。
 其实线性思维是常见的一种想当然，也许许多事物的常态是类线性的，但是常态或者普通事物往往不是关键，需要面对的情况往往是非常态，所以要注意避免线性地想当然。
-37. 对现实隐忍，对未来有期待，在当下有作为。
+37. **`对现实隐忍，对未来有期待，在当下有作为。`**
 38. 内向但精力充沛有企图心的人。性格内向的人更易成功：美国MSNBC网站报道称，一项研究发现，内向害羞大多与生俱来，而且，内向的人在工作中更容易成功。
 在做决策时，他们愿意花大量时间思考，不喜欢闲扯其他的话题，更能专心致志地奔着一个目标努力，因此他们成功的几率也相应增大。
 39. 很多复杂问题是更高维度简单问题的投影，比如说打篮球动作变形. 速度慢. 配合差是很多时候体力不行；写程序烂. bug多. 时间长是抽象分解问题做的不好；还有比如海军说的“很多管理问题都是假象本质是能力问题”。而解决这些本质问题需要更大代价和决心的。
-40. 人欲望太强的时候就容易短视，太自我中心的时候就容易盲目。
+40. **`人欲望太强的时候就容易短视，太自我中心的时候就容易盲目。`**
 41. 以前一直都没觉得找人自信很重要，现在发现越来越重要。惰性. 依赖. 拖拉. 保守很多也都是是不自信导致的。自信的人自然会和自我高要求联系起来。
 42. 常说机会总是青睐有准备的人，其实更多时候是机会已经来了只是还没凸显，往往自己没珍惜。
 43. 不抬杠，要抓住主要问题，任何办法都是在一定时空下对真理的近似实现，时空条件越具体，办法法就越有效。如果去抬杠“近似”，那么就更难在这个时空条件下实施。
 44. 强烈的动机比方法更根本。
 45. 不爱表达观点的人总是容易被人认为没想法不聪明，而部分强势之人更爱发表意 见所以看其他人大多不如自己聪明，其以中爱发表关于他人是否聪明的意见之人为甚。
 46. 聪明还耐心是有一些矛盾的优点，同时具备两点的人却非常优秀。
-47. 一点不要含糊，含糊代表着侥幸. 代表着自我欺骗. 代表着自我感觉飘然。
-48. 执行力这个词一度很流行，在我理解来看就是态度和能力。不断筛选和提高大家的态度能力就是提高执行力。
-49. 习惯：把要做的事情迅速分配在calendar上，会变化没关系，多调整。
+47. **`一点不要含糊，含糊代表着侥幸. 代表着自我欺骗. 代表着自我感觉飘然。`**
+48. **`执行力这个词一度很流行，在我理解来看就是态度和能力。不断筛选和提高大家的态度能力就是提高执行力。`**
+49. **`习惯：把要做的事情迅速分配在calendar上，会变化没关系，多调整。`**
 50. 你是在松懈状态还是在挑战状态？（这是第一条微博）
 ## :purple_heart:关于生活
 1. 老子说祸兮福之所倚，福兮祸之所伏。幸运的时候不要忘形，失意的时候也不要绝望，相信事情总会有转机。
 那这句话是唯心的还是唯物的呢？当然是唯物的，告诉你忘形和失意都无助于事，做有意义的事情，关注事情的变化。
 2. 很多时候不是不理解，甚至不是认识不到，至是不愿意深刻认识到这往往还是隐隐的主观在作怪。
-3. 最贵的是“学费”。
-4. 不停地想应该如何让未来更精彩。
+3. **`最贵的是“学费”。`**
+4. **`不停地想应该如何让未来更精彩。`**
 5. 快50岁，思路清晰深入，细节敏感，执行又高举高打，很好地控制自己情绪。晚上参加活动看到别人的优点。
 6. 用心认真的折腾是没有风险的。
-7. 遇到一本好书很愉快和遇到一个非常值得交往的朋友是相似的。
+7. **`遇到一本好书很愉快和遇到一个非常值得交往的朋友是相似的。`**
 8. 在北京6年住了6个地方：回龙观，双榆树，知春里，和平里，惠新西街，西土城。你住过哪儿？
 9. 多修炼，期早达：耳顺. 知天命. 从心所欲不逾矩。想起一个朋友的 msn签名：三十耳顺，当时没注意，现在想到已经了不起了，提前了一半。
 10. 在不来劲的时候来劲，在太来劲的时候淡定。
-11. 谦虚的人能看到自己的不足，自信的人能在知道不足的情况下依然积极。
-12. 关于消费：买书. 健身. 学习都属于资金成本边际成本很低，对于很多人，只要你能真正完成这些消费，资金都不是主要成本而值得大力投入的消费。
+11. **`谦虚的人能看到自己的不足，自信的人能在知道不足的情况下依然积极。`**
+12. **`关于消费：买书. 健身. 学习都属于资金成本边际成本很低，对于很多人，只要你能真正完成这些消费，资金都不是主要成本而值得大力投入的消费。`**
 综上，我非常建议大家买书. 买电子书. ipad. 智能手机. 买健身卡. 游泳卡...... 还有类似的消费吗？
 13. 听说有人每天能看一本书，问题还不在看书速度，而是在知易行难，实践的速度赶不上所知的要求，欠账很多。
 14. 晚上看书，看书——带着悔恨的心情和克制悔恨的努力。
-15. 改变你目前能改变的，专注到circle of influence：现在最重要的——放松，睡觉去。
-16. 最近感想：口碑很重要，人品很重要，信用很重要，越老越重要，原则要坚定。
+15. **`改变你目前能改变的`**，专注到circle of influence：现在最重要的——放松，睡觉去。
+16. **`最近感想：口碑很重要，人品很重要，信用很重要，越老越重要，原则要坚定。`**
 17. 上帝不可能骗得了我，因为所有的欺骗都有漏洞。——笛卡尔
-18. 你们读了哪些传记？想起2年前朋友说：如果不知道让小孩阅读什么，最适合的就是传记。
-最近在思考与回忆：关于品格. 理想. 动机的形成，觉得确实如此。
+18. 你们读了哪些传记？想起2年前朋友说：**`如果不知道让小孩阅读什么，最适合的就是传记。`**
+**`最近在思考与回忆：关于品格. 理想. 动机的形成，觉得确实如此。`**
 19. 关于感性，或忧或悲，但你看到人生不容易十之八九，当你看到生活的真实面目时：你会悲，但就不会因表象而伤感；你会喜，也不会而浮华而极乐。
 生活中有时候猛然听到残酷而又真实有穿透力的话，看到本有违世界观而又有理的书，直到你自己会下意识的去看生活本来面目，你的感性就变化了。
 20. 玩德州扑克看人性的弱点：
-01. 贪玩（一开始拿烂牌但是不fold）
-02. 侥幸（希望等低概率事件）
-03. 不能舍（因过去付出而不放弃）
-04. 过度概括（只看一个例子就下结论）
++ 贪玩（一开始拿烂牌但是不fold）
++ 侥幸（希望等低概率事件）
++ 不能舍（因过去付出而不放弃）
++ 过度概括（只看一个例子就下结论）
 其实，德州扑克和人生一样，应该：
-01. 理解不确定性
-02. 专注有可能的事情
-03. 理智评估概率
-04. 能舍才能得
-05. 避免意气用事
++ 理解不确定性
++ 专注有可能的事情
++ 理智评估概率
++ 能舍才能得
++ 避免意气用事
 21. 终于把《如何阅读一本书》阅读完了。
 美国人就是认真，把阅读的问题方法刨根究底。这不是一本资讯娱乐类的书，是需要增进理解的书。中文版翻译得不好。
 22. 《如何阅读一本书》一书在谈在技能之外，更多的是讲学习的态度和沟通的方法。比如赞同和反对作者一章，其实标题亦可写为，关于沟通的赞同和反对。
 23. 看完《如何阅读一本书》这一章：如何做一个自我要求的读者。也即阅读应该是有自我要求的具主动状态的。阅读两字换成其它很多词也适用。
 24. 一件事情上，在心里想对方自私的时候，想一想自己：多数发现自己也蛮自私的。在骂对方贪婪的时候，想一想自己：多数发现自己也同样贪婪。
-25. 做个理性人，很多事情就不必做。感性做人，理性做事的态度有其意义。
+25. **`做个理性人，很多事情就不必做。感性做人，理性做事的态度有其意义。`**
 26. 今天手机报上有一段话：“独处是一次心灵按摩” 静坐在斗室里，漫步在小道上，平躺在沙滩上......有意识的面对自己，和内心对话。
 喜欢独处的人，和别人在一起时，往往也会处理得更好。交流和独处相辅相成，才能让内心成熟和强大。
 27. 写完文档准备睡觉，想起今天看的《facebook效应》，突然想起《普通生物学》介绍的一个物质：多巴胺。
 最近愈发想起人与人之间状态区别，是否有激情，是否自我激励，是否是由这类物质的代谢水平决定了基本面。肖恩·帕克是多巴胺水平很高的典型？
 28. 想做的事情太多，经常要抑制自己的激动。
 29. 有不少留言说不理解这段话。研究快乐的专家告诉我们：
-快乐有三种：pleasure（欢乐）. passion（热情）. higher purpose（理想. 有意义）。其中欢乐是最短暂的，热情其次，而最长久的是理想。
+**`快乐有三种：pleasure（欢乐）. passion（热情）. higher purpose（理想. 有意义）。其中欢乐是最短暂的，热情其次，而最长久的是理想。`**
 30. 现在年轻人部分流行把三四十岁退休作为理想，我不认同，我觉得理想是一直有机会创造. 实现想法，有机会学习，修炼，创造到老。
 为什么会想退休？想退休说明你认为现在是在“忍”。我还有很多很多想法想做，希望三四十岁更多条件去实现想法。
 31. 人群总有一些人xx素比普通人高（很好）有精神有斗志，爱学习，爱创造，爱折腾。下午和一个在某顶级互联网公司的老朋友聊天，他又要出来创业了。
-32. 保证足够睡眠是积极高效的第一步。
-33. 自我实现，自我修炼是最高层次。
+32. **`保证足够睡眠是积极高效的第一步。`**
+33. **`自我实现，自我修炼是最高层次。`**
 34. 生活中不是缺少美，而是缺少分享。
 35. 通货膨胀正在洗劫你的钱包，同学问怎么办？
 三个办法，一是尽可能地提高家庭负债率，当今之世能借到钱的就是英雄；二是配置资源性财产，能够抵抗通涨的只有三个东西，黄金房产和农产品；三是像傻瓜一样的长期持有，眼前的涨跌都是对耐心的考验。除非天下大乱，否则以上三条应是规律。
-36. 我今天的处境都是因为我有些应该做的事情我没有做，不应该做的事情我就全做，所以要改变现状，就要从自己开始。
-37. 系统地运动锻炼需要抗身体的惰性，锻炼久了之后不但身体好而且锻炼的积极性也好容易启动养成习惯，最近觉得读书学习也很类似。
+36. **`我今天的处境都是因为我有些应该做的事情我没有做，不应该做的事情我就全做，所以要改变现状，就要从自己开始。`**
+37. **`系统地运动锻炼需要抗身体的惰性，锻炼久了之后不但身体好而且锻炼的积极性也好容易启动养成习惯，最近觉得读书学习也很类似。`**
 38. 最近三个月身体锻炼的进展：腰背少严重疼了，一次跑五公里，一次游一公里都很轻松了。近期目标，自由泳学习中，健身学习中，羽毛球提高。
 39. 喜欢最近地铁里的一句广告词：we trust learning。
 40. 不怕犯错误，不怕坏方法，甚至不怕坏习惯。只要你会自我改正。你习惯改正吗？
 41. 单身的人是有一些好处的，比如更多自由独立思考的环境和时间，孤独往往使人更加深邃和广阔，非单身的人想想如何避免非单身的缺点。
 42. 今天见了一个5年未见的同学和半年未见的同学。期间有位同学说工作生活最近很没意思。
-其实5年变化已经很大，不过我觉得还不够大，生活的意思完全可以自己找，自己改变人生意思就很大。
+其实5年变化已经很大，不过我觉得还不够大，**`生活的意思完全可以自己找，自己改变人生意思就很大。`**
 不要等意思来找你。借用奥巴马的话说 “change，yes we can.”
 43. 低落的状态时情况往往没有感受的难，松懈的时候其实不如想象的容易，人往往难理性。
 44. 对很多事情我挺有自己观点和想法，目前不能解决问题，没有效果，所以不应该去展开和评论，要想想现在能有效果和价值的事情。
-我甚至时常要提醒自己：你这样想是没有错的也是没有用的，赶紧做许多又很有用又没有错的事情。
+**`我甚至时常要提醒自己：你这样想是没有错的也是没有用的，赶紧做许多又很有用又没有错的事情。`**
 45. 最近感觉忙碌多，思考学习反省又少了，观察问题也不不够深入和耐心，在speed up和激动干劲足的时候，保持一份slow down的心态很重要。
 46. 很多事情都是这样既没有你设想的容易，也没有你想象的难。睡觉。
-47. 01. 所谓门槛，过去了是门，过不去则是槛；
-02. 人生的悲哀往往是，你 想两肋插刀，刀却只有一把；
-03. 怀旧，不是那个时代有多好，而是那时你年轻；
-04. 觉得不快乐，是因为我们追求的不是“幸福”，而是“比别人幸福”；
-05. 两人的感情就像织毛衣，建立时一针一线，拆除时只需轻轻一拉。
-48. 成熟感悟：成熟就是从inside-out更多的变成outside-in，就是在需要时常能变成忍者神龟，在另一些时候又能变成动感超人。
-49. 昨天父亲节，和爸妈视频聊天，他们在广东经商，这几年竞争压力内部意见纠纷不小，有时想建议他们别经营了，退休养老，但办公司往往欲退不能。
+47. 
++ 所谓门槛，过去了是门，过不去则是槛；
++ 人生的悲哀往往是，你 想两肋插刀，刀却只有一把；
++ 怀旧，不是那个时代有多好，而是那时你年轻；
++ 觉得不快乐，是因为我们追求的不是“幸福”，而是“比别人幸福”；
++ **`两人的感情就像织毛衣，建立时一针一线，拆除时只需轻轻一拉。`**
+48.  成熟感悟：成熟就是从inside-out更多的变成outside-in，就是在需要时常能变成忍者神龟，在另一些时候又能变成动感超人。
+49.  昨天父亲节，和爸妈视频聊天，他们在广东经商，这几年竞争压力内部意见纠纷不小，有时想建议他们别经营了，退休养老，但办公司往往欲退不能。
 昨天爸爸说还想投入更多一搏，我想既然劝退不行不如鼓励他放手一搏，信任就是鼓励。我不能回去帮忙就要把自己的事情做好，让他不要有担心。
 50. 今天公司进行读书交流会，其中提到《别做正常的傻瓜》一书，大家对是否理性的态度有分歧。
 51. 人生吧，0岁出场，10岁快乐成长；20为情彷徨；30基本定向；40拼命打闯；50回头望望；60告老还乡；70搓搓麻将；80晒晒太阳；90躺在床上；100挂在墙上。
-52. 人生的本质是追寻自我的提升。包括思想. 能力. 意志等等。这些发展好了，一切随之而来。
+52. **`人生的本质是追寻自我的提升。包括思想. 能力. 意志等等。这些发展好了，一切随之而来。`**
 偏偏大多数人追求的是短期的公司. 职位. 薪水，运气好的能有所发展，运气差的会迷失方向流于平庸。
 53. 周末参加一个朋友婚礼，发现新郎最近去了中央某监管结构的信息处，博士新娘回到新郎故乡担干部。他们已经两地分居5年了，为了珍惜机会还要继续分开。
 这样我是做不到的，也不赞同，人生在世就应该尽可能实现价值体验生活，为了静态的收益而去“忍”损失生活，损失很大，不是创造的人生。
 54. 不满足之后有几种反应：
-01. 努力提高自己
-02. 尝试安慰自己
-03. YY&YY
-04. 抱怨牢骚记在其它人事身上
++ 努力提高自己
++ 尝试安慰自己
++ YY&YY
++ 抱怨牢骚记在其它人事身上
 55. 一次别以看一本为目标，比如看5页为目标，当下的力量0.1>>0 。
 如果说哪里来了一个高人每次都会听得很仔细，听完以后觉得很有收获；而看书则是完全不同的心情了。
 电脑里的经典书籍都翻天了却从来没有仔细翻过，真是书非借不能读啊。真是应该给自己一个规划，用看待约会和讲座的心情来看待每一次阅读。
@@ -261,11 +261,11 @@ author:
 2. 路径依赖的强弱可表征延迟满足感。
 3. 3年前和朋友聊天，问他对合作者对人才看重什么，其它点我已经记不住了，唯记住：不装B。
 当时楞了一下，随后越发觉得有道理。经常要提醒自己，这也是延迟满足感的一种锻炼。
-4. 凡事就怕不认真，不思考。好多问题我应该能知道的，只是之前没有认真看，认真想，想当然（不是没时间）。延迟满足感是一项长期修炼。
+4. 凡事就怕不认真，不思考。好多问题我应该能知道的，只是之前没有认真看，认真想，想当然（不是没时间）。**`延迟满足感是一项长期修炼。`**
 5. 今天晚上的时候，每个周五晚上下班的时候，我常会和同事说：我明天假期我们再把xxx做好。
-每次突然想这句话矛盾啊，不能这样要求。嗯，生活工作要平衡。不过，别人腐败的时候我们在努力，别人消磨时光的时候我们在学习，那么延迟的满足一定会厚积薄发来到。
-6. 延迟满足感经验：涵蓄情绪，让自己静止，不要在沟通交流的时候走动. 晃动， 情绪跳动，思维失去精确控制。
-7. 延迟满足感和坚决告别惰性，是“优秀”的最重要两块基石。
+每次突然想这句话矛盾啊，不能这样要求。嗯，生活工作要平衡。**`不过，别人腐败的时候我们在努力，别人消磨时光的时候我们在学习，那么延迟的满足一定会厚积薄发来到。`**
+6. **`延迟满足感经验：涵蓄情绪，让自己静止，不要在沟通交流的时候走动. 晃动， 情绪跳动，思维失去精确控制。`**
+7. **`延迟满足感和坚决告别惰性，是“优秀”的最重要两块基石。`**
 ## :heartpulse:关于管理
 1. 三顾茅庐已经不适用了，必须得四顾。
 2. 我自己的方法：忘掉资历，集中精力才能力和潜力来评估。资历是个锚点，但未必准确。
@@ -277,9 +277,9 @@ author:
 7. 据多家公司统计，团队淘汰个人的顺序往往如下：
 第一批，明显缺陷者. 众人厌恶的说谎者；第二批，不愿交流者. 不合群者；第三批，有能力但慵懒者. 妄图坐享其成者；第四批，居功自傲者，蔑视同僚者。
 8. 他解答团队中部分人不能跟上公司发展的处理要点，三点原则：
-01. 以德为主，德有大问题则需离开；
-02. 话说清楚不含糊. 好好说，先鼓励给机会. 不要让团队意外. 猜测担心。
-03. 德具备. 才落后或者不匹配的情况，要给降下的人降落伞，降落伞要有含金量，要替人考虑好。
++ 以德为主，德有大问题则需离开；
++ 话说清楚不含糊. 好好说，先鼓励给机会. 不要让团队意外. 猜测担心。
++ 德具备. 才落后或者不匹配的情况，要给降下的人降落伞，降落伞要有含金量，要替人考虑好。
 9. 当你给一个人足够的信任和压力的时候，他总能比原来做得更好。
 10. 开会的时候总有些大忙人在那里闷头回邮件玩短信，认为讨论的那些别人的事和自己无关，这是极端错误的。
 让你参会说明领导认为会议的内容你需要知道并希望听到你的意见，如果发现你不会倾听又对会议无所贡献，慢慢你就不会再被要求参会，久而久之在组织中也就被边缘化了。
@@ -308,10 +308,10 @@ author:
 24. 姜子牙81岁才当上三军总司令，人家前80年就做两件事：好好学习和锻炼身体。
 25. 一个公司最强的敌人是什么？韦尔奇说，是“坦率”。深表认同。幸好，坦率是可以培育的。
 26. 我觉得以后团队的工作，不论大小，应把工作的目标定义并分解后，邮件发出来。
-01. 这样可以别人提意见；
-02. 可以避免重复的工作；
-03. 定义清楚避免理解有误差；
-04. 同时能估计工作量. 评估效率方法。
++ 这样可以别人提意见；
++ 可以避免重复的工作；
++ 定义清楚避免理解有误差；
++ 同时能估计工作量. 评估效率方法。
 清楚不含糊要成为公司的文化。
 27. 昨晚请多玩优秀员工吃饭，聊了几点职场体会：
 01. 把自己当老板看，像老板一样拼命干活，能力自然就提高了。有了能力，假如老板不能给你好的回报，其他公司一定会给；
@@ -357,8 +357,8 @@ author:
 帮用户省钱不再是唯一思路，甚至不是最佳思路。
 非常强的改善体验的技术应用，靠技术的强劲推动力，让不可能变成可能。
 6. 对产品经理的常用问题：有什么好处，重要吗，怎么知道的，达到这个好处有好的做法吗？
-7. 如果你很有才华，在某些方面又有一技之长，请先不要急于露出锋芒，如果你只是以普通身份而不是以领导身份到新单位去的，那就更不能锋芒太露。
-一个人新到一个单位，就像一粒石子投入一潭平静的池水，往往会引入注目，一举一动， 一言一行，都在别人的视野之中。
+7. **`如果你很有才华，在某些方面又有一技之长，请先不要急于露出锋芒，如果你只是以普通身份而不是以领导身份到新单位去的，那就更不能锋芒太露。`**
+**`一个人新到一个单位，就像一粒石子投入一潭平静的池水，往往会引入注目，一举一动， 一言一行，都在别人的视野之中。`**
 8. 发现问题总是又高兴又郁闷，高兴：解决问题；郁闷：为什么是我发现，为计么现在才发现。
 9. 做产品一定要坚持面对事实仔细辨析小心求证，不绕弯不侥幸不鸵鸟，延迟满足感。
 10. 创业忌：未思进，先思退。
@@ -366,7 +366,7 @@ author:
 12. 大半夜来点给力的，创业四原则。刚才又一位出来创业的兄弟msn上跟我聊。再次诚恳分享给他：
 01. 凡事只能靠自己；
 02. 万事皆有解，且只有唯一正解；
-03. 凡是担心的事一定会发生；
+03. **`凡是担心的事一定会发生`**；
 04. 从创业的第一天开始，享受。
 13. 未来会有更多的输入输出的创新让信息可流动，更多分发推荐的机制转动起来。
 14. 我从小到大遇到过2个大忽悠（不是某件事忽悠，忽悠成性的那种人），一个中学同学，一个是今年。
