--- a/docs/04.写过的项目/01.后台管理界面.md
+++ b/docs/04.写过的项目/01.后台管理界面.md
@@ -24,19 +24,14 @@ author:
 
 ## 3、项目截图
 ### 1.登录页
-![登录页](../.vuepress/public/img/admin_shop/login.png)
+![login](https://cdn.jsdelivr.net/gh/clozz-lin/images@master/xxx/login.png)
 ### 2.用户列表
-![用户列表](../.vuepress/public/img/admin_shop/users.png)
-
+![users](https://cdn.jsdelivr.net/gh/clozz-lin/images@master/xxx/users.png)
 ### 3.角色列表
-![角色列表](../.vuepress/public/img/admin_shop/roles.png)
-
+![roles](https://cdn.jsdelivr.net/gh/clozz-lin/images@master/xxx/roles.png)
 ### 4.权限列表
-![权限列表](../.vuepress/public/img/admin_shop/rights.png)
-
+![rights](https://cdn.jsdelivr.net/gh/clozz-lin/images@master/xxx/rights.png)
 ### 5.参数列表
-![参数列表](../.vuepress/public/img/admin_shop/cate.png)
-
+![cate](https://cdn.jsdelivr.net/gh/clozz-lin/images@master/xxx/cate.png)
 ### 6.数据报表
-![数据报表](../.vuepress/public/img/admin_shop/baobiao.png)
-
+![baobiao](https://cdn.jsdelivr.net/gh/clozz-lin/images@master/xxx/baobiao.png)
