--- a/docs/04.写过的项目/03.静态页面练习.md
+++ b/docs/04.写过的项目/03.静态页面练习.md
@@ -16,6 +16,5 @@ author:
 + `轻度Js` `声音按钮控制声音的切换`
 
 ### 项目截图
-![首页](../.vuepress/public/img/xx_shop/../douyin.png)
-
+![douyin](https://cdn.jsdelivr.net/gh/clozz-lin/images@master/xxx/douyin.png)
 ## 2、
