--- a/docs/04.写过的项目/02.小程序.md
+++ b/docs/04.写过的项目/02.小程序.md
@@ -24,16 +24,12 @@ author:
 
 ## 3、项目截图
 ### 1.首页
-![首页](../.vuepress/public/img/xx_shop/index.png)
+![index](https://cdn.jsdelivr.net/gh/clozz-lin/images@master/xxx/index.png)
 ### 2.商品分类
-![商品分类](../.vuepress/public/img/xx_shop/cate.png)
-
+![cate_xxhop](https://cdn.jsdelivr.net/gh/clozz-lin/images@master/xxx/cate_xxhop.png)
 ### 3.购物车
-![购物车](../.vuepress/public/img/xx_shop/cart.png)
-
+![cart_xxhop](https://cdn.jsdelivr.net/gh/clozz-lin/images@master/xxx/cart_xxhop.png)
 ### 4.我的
-![我的](../.vuepress/public/img/xx_shop/mine.png)
-
+![mine](https://cdn.jsdelivr.net/gh/clozz-lin/images@master/xxx/mine.png)
 ### 5.商品详情
-![商品详情](../.vuepress/public/img/xx_shop/good_detail.png)
-
+![good_detail](https://cdn.jsdelivr.net/gh/clozz-lin/images@master/xxx/good_detail.png)
