--- a/docs/06.关于/01.关于.md
+++ b/docs/06.关于/01.关于.md
@@ -2,17 +2,16 @@
 title: 关于
 date: 
 permalink: /about/
-sidebar: false
 article: false
 comment: false
 author:
 ---
 
 
-## 🐼Me
+## :whale2:Me
 web前端小学生
 
-### 技能
+## :ski:技能
 * 熟悉 JavaScript、HTML、CSS、Vue、React 的拼写
 * 了解 Linux、windows、macOS 的开关机方式
 * 精通 Git 的 pull 和 push，并注册了 GitHub 帐号刷了一些 star
