--- a/docs/05.更多/01.推荐/01.你好，旧时光/04.关于睡眠质量这件事.md
+++ b/docs/05.更多/01.推荐/01.你好，旧时光/04.关于睡眠质量这件事.md
@@ -94,3 +94,13 @@ author:
 
 这样能保证一天的精力，但是往往现实与实际不符，改变始终是不容易的，祝你好运吧。
 
+## 4.元气越足，睡眠越好，所以要适当禁欲（个人经验）
+
+**`而且元气足了，做事情也更有效率，人也会变得话很多，总之好处很多`**
+
+
+**`补充元气的方法：`**
++ **`适当禁欲，在元气充足有保障之前，不可以放纵自己的欲望。`**
++ **`睡眠好`**
++ **`多吃营养补品`**
+
