--- a/docs/05.更多/01.推荐/02.テスト問題/01.Html.md
+++ b/docs/05.更多/01.推荐/02.テスト問題/01.Html.md
@@ -7,3 +7,19 @@ author:
   name: cl
   link: https://github.com/clozz-lin
 ---
+下列来源：[做了一份前端面试复习计划，保熟～2022年02月06日 21:36 ·  阅读 169228](https://juejin.cn/post/7061588533214969892#heading-12)
+## 如何理解 HTML 语义化？
+##  script 标签中 defer 和 async 的区别？
+## 从浏览器地址栏输入 url 到请求返回发生了什么
+## 
+## 
+## 
+## 
+## 
+
+
+## 
+## 
+## 
+## 
+## 
