--- a/docs/05.更多/01.推荐/02.テスト問題/03.Js.md
+++ b/docs/05.更多/01.推荐/02.テスト問題/03.Js.md
@@ -7,8 +7,24 @@ author:
   name: cl
   link: https://github.com/clozz-lin
 ---
+## 做了一份前端面试复习计划，保熟～2022年02月06日
+下列来源：[做了一份前端面试复习计划，保熟～2022年02月06日](https://juejin.cn/post/7061588533214969892#heading-12)
 
-## 1、:blush:数据类型
+## 2022三四月前端面试总结
+
+下列来源：[2022三四月前端面试总结](https://juejin.cn/post/7081599008174997517)
++ `变量提升，function声明和var提升的优先级`
++ `说一说defer 和 async`
++ `如何把异步变为同步`
++ `Promise.all的实现`
++ `为什么promise的then方法要返回一个新的promise而不是返回this`
++ `浅拷贝和深拷贝的区别`
++ `手写深拷贝`
++ 
+
+
+
+<!-- ## 1、:blush:数据类型
 以下是比较重要的几个 js 变量要掌握的点。
 ### 1.1 基本的数据类型介绍，及值类型和引用类型的理解
 在 JS 中共有 8  种基础的数据类型，分别为： `Undefined` 、 `Null` 、 `Boolean` 、 `Number` 、 `String` 、 `Object` 、 `Symbol` 、 `BigInt` 。
@@ -158,6 +174,4 @@ function createCache() {
 const c = createCache();
 c.set("a", 100);
 console.log(c.get("a")); // 100
-```
-
-## 
+``` -->
