--- a/docs/05.更多/01.推荐/02.テスト問題/04.Vue.md
+++ b/docs/05.更多/01.推荐/02.テスト問題/04.Vue.md
@@ -7,3 +7,14 @@ author:
   name: cl
   link: https://github.com/clozz-lin
 ---
+
+下列来源：[2022三四月前端面试总结](https://juejin.cn/post/7081599008174997517)
+
+## vue双向绑定
+## vue组件通信的方式
+## Vue中的nextTick
+## 可以说说vue中的diff算法吗
+## vue2于vue3有什么不同，vue3有什么优势
+## 
+## 
+## 
