--- a/docs/05.更多/02.兴趣爱好/02.样/01.「保姆级吉他零基础教学」.md
+++ b/docs/05.更多/02.兴趣爱好/02.样/01.「保姆级吉他零基础教学」.md
@@ -2,6 +2,7 @@
 title: 「保姆级吉他零基础教学」
 date: 2022-04-26 22:13:20
 permalink: /pages/b0fe21/
+sidebar: auto
 author: 
   name: cl
   link: https://github.com/clozz-lin
@@ -12,11 +13,11 @@ author:
 
 ## 第二期：9分钟学完十二平均律十二平均律和基本音调法
 **`十二平均律`**
-| `Do`  |       | `Re`  |       | `Mi`  |       | `Fa`  |       | `Sol` |       | `La`  |       | `Si`  |       | `Do`  |       | `       |
-| :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :------ |
-|  `1`  |       |  `2`  |       | `3 `  |       |  `4`  |       |  `5`  |       | `6 `  |       |  `7`  |       | `1 `  |       | `唱名`  |
-|  `C`  |       |  `D`  |       |  `E`  |       |  `F`  |       |  `G`  |       |  `A`  |       |  `B`  |       |  `C`  |       | `音名`  |
-|       | `全`  |       | `全`  |       | `半`  |       | `全`  |       | `全`  |       | `全`  |       | `半`  |       |       | ·`音程` |
+| `Do`  |       | `Re`  |       | `Mi`  |       | `Fa`  |       | `Sol` |       | `La`  |       | `Si`  | `Do`  |
+| :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |
+|  `1`  |       |  `2`  |       | `3 `  |       |  `4`  |       |  `5`  |       | `6 `  |       |  `7`  | `1 `  |
+|  `C`  |       |  `D`  |       |  `E`  |       |  `F`  |       |  `G`  |       |  `A`  |       |  `B`  |  `C`  |
+|       | `全`  |       | `全`  |       | `半`  |       | `全`  |       | `全`  |       | `全`  |       | `半`  |
 
 
 **`基本音调法`**
@@ -33,6 +34,7 @@ author:
 
 
 ## 第四期：C调爬格子，这样爬！
+**`节拍开90（建议一开始）`**
 
 **`爬音阶`**
 
