--- a/docs/05.更多/02.兴趣爱好/02.样/02.吉他谱星选集.md
+++ b/docs/05.更多/02.兴趣爱好/02.样/02.吉他谱星选集.md
@@ -6,3 +6,18 @@ author:
   name: cl
   link: https://github.com/clozz-lin
 ---
+
+**`常用网站：`**
++ [吉他社](https://www.jitashe.org/artist/)
++ [吉他屋](https://www.jita5.cn/qupu/)
++ [17吉他](https://www.17jita.com/tab/)
+
+
+## 有生之年
+
+[有生之年指弹谱](https://www.jitashe.org/tab/1389595/)
+
+
+## 斑马斑马
+
+[《斑马斑马》前奏详细【无废话】讲解演示 结尾附谱](https://www.bilibili.com/video/BV11o4y1R7xY?spm_id_from=333.337.search-card.all.click)
