--- a/docs/01.前端/01.原创/01.ES6.md
+++ b/docs/01.前端/01.原创/01.ES6.md
@@ -2,7 +2,7 @@
 pageComponent:
   name: Catalogue
   data:
-    path: 555+ES6(原创)
+    path: 555+原创/01.ES6
     imgUrl: https://cdn.jsdelivr.net/gh/xugaoyi/image_store/blog/20200112160453.png
     description: 本章内容为在原教程基础上添加的学习笔记，教程版权归原作者所有。来源：<a href='https://es6.ruanyifeng.com/' target='_blank'>ES6教程</a>
 title: ES6
