--- a/docs/00.目录页/02.页面.md
+++ b/docs/00.目录页/02.页面.md
@@ -3,7 +3,7 @@ pageComponent:
   name: Catalogue
   data:
     key: 02.页面
-    imgUrl: /img/ui.png
+    imgUrl: https://cdn.jsdelivr.net/gh/clozz-lin/images@master/blog_index_private/ui.png
     description: html(5)/css(3)，前端页面相关技术
 title: 页面
 date: 2020-03-11 21:50:54
