--- a/docs/00.目录页/04.写过的项目.md
+++ b/docs/00.目录页/04.写过的项目.md
@@ -3,7 +3,7 @@ pageComponent:
   name: Catalogue
   data:
     key: 04.写过的项目
-    imgUrl: /img/cat1.gif
+    imgUrl: https://cdn.jsdelivr.net/gh/clozz-lin/images@master/blog_index_private/cat1.gif
     description: 
 title: 写过的项目
 date: 2020-03-11 21:50:53
