--- a/docs/03.技术/01.推荐/02.axios.md
+++ b/docs/03.技术/01.推荐/02.axios.md
@@ -6,3 +6,5 @@ author:
   name: cl
   link: https://github.com/clozz-lin
 ---
+
++ [axios--axios框架](https://juejin.cn/post/6870852275754467341#heading-19)
