--- a/docs/05.更多/02.兴趣爱好/01.苏/01.韩寒.md
+++ b/docs/05.更多/02.兴趣爱好/01.苏/01.韩寒.md
@@ -54,3 +54,27 @@ author:
 我要迎接满河的龙虾。
 我要迎接能刺痛我皮肤的带刺的野草。
 我要迎接能刺痛我眼睛的我从不敢正视的太阳。`**
+
+## 《青春》
+**原文摘录**
++ `告诉女生，这个学校虽然很适合谈恋爱，但是记得一定要在寝室熄灯前回去。也可以帮自己中意的男生洗一洗内裤袜子的。未来会有大出息的男孩子，在洗衣服上一般都不太拿手的。希望你们实现自己的理想，有好的大学，好的工作，好的家庭，好的老公。如果你的老公是你的高中同学，那就更加恭喜了。`
++ `告诉男生．追女孩子的时候，我有一个秘诀判断她们的好坏。我从小到大能好好相处的我所痴迷的女孩子，最少都是两条杠，基本都是三条杠。学习成绩好的又漂亮的女孩子一定是很好的。首先，家教一定好;其次，以后带出去肯定很得体，因为她们和同学老师的关系都处理得很好，不会让你在朋友面前丢面子的，而且还乖，都不会坏，又踏实。不要以为她们内心很高傲，其实她们是最好追的，乘风放胆去吧。当然，作为一个男生，你如果也是两条杠三条杠之类的，那就没戏了。这样的女孩子是宝，` **`但这样的男孩子就什么都不是了。`** `学习成绩好的女孩子一般一动心就动很久，一出轨就出很远，好好珍惜她们。`
++ `祝愿大家做一个好好学习的女孩子，做一个拥有能力的男孩子，最重要的是，先学会生存，再学会更好地生存，最后学会不违心地生存。`
++ `要做一个好人，所有的吃亏和被骗只能激励你的斗志，而不是你的仇恨。不要危害社会，不要妨碍他人。成家立业，儿女绕膝，享受平静的生活，不要让自己的女人吃苦，不要让自己的男人洗内裤，当然洗内裤不算吃苦。在这所学校里，你们的人生会奠基，无论你喜欢光明大道还是旁门左道，要记得在走的时候，你的人是要站直的。`
++ `祝愿这所学校培育出更多像我一样德智体美劳全面发展的好学生，永远有这么好的环境，永远不要被房地产商把这块地给买了。最后，我有一个小小的请求，我每次想去母校看看的时候，门卫间的大爷能不能放我进去?我真的不是外校的小流氓，我是本校的小流氓。`
+
+
++ `而理想本身什么都不是，一点也不高尚，理想就是有点想，是欲求的一种文艺表达。所以，我从来不觉得强调理想是救赎青春的一种方式。我甚至不觉得年轻人需要什么救赎，什么方向，什么理想，什么希望，都不需要。就像每一个时代里的人都觉得自己没有赶上一个好的时代一样。这里没有末路，你从不曾孤独。`
++ **`我们需要做的就是淘汰弱者，留下强者，而不是大家一起变成弱者。弱者再怎么打架都不好看。`**
++ `一个国家有那么多艺人转变国籍，一定是有原因的。对于普通老百姓来说，也就是吃不起住不起玩不起结不起生不起病不起死不起，最关键的是，还移民不起，所以，看见你们跑了，不爽是肯定。`
++ `他们变换了国籍，是他们的选择，这个选择就像离婚一样，可能是感情破裂了，可能是遇见了更好的，在道德层面上是可以谴责的，但是在人格层面上是没有任何问题的。`
++ `过了少年，失去青年，踏向中年；……想活得更好，活得更不好；有理想，不敢想；想创业，怕失败；盼真爱，却已婚；恨特权，又敬畏；怨体制，但想做公务员；……遵纪守法，但眼看着胡作非为的一个个发家`
++ `欺负我一次没问题，欺负我两次没问题，你再欺负我以为我是受虐狂啊。`
++ `得之我幸，不得我不信，再不得我不幸，无非就是这样。多少这样的事情，无情人终成眷属，有情人却成陌路。`
++ **`你赚了多少钱往往是中国家庭衡量一个小孩在这个世界上的价值的唯一标准。`**
++ `我曾经无意识的带领你 们去往各个博客铲除异己，如今我欣喜的看到我们共同的进步，四年前的我一定带不走今天的你。热血一定要洒在它该洒的地方，否则它就叫` **`鸡血。`**
++ `人家直接说要强奸你，你肯定不愿意，但人家先说，我要杀你全家，然后人家又说，要不你就让我强奸一下，这下你就愿意了。最后，你还是被人强奸了，但你还觉得强奸犯很仁慈。`
++ **`在未来的十年里，这些年轻人都是无解的，多么可悲的事情，本该在心中的热血，它涂在地上`**
++ `这就是为什么富士康有这么多人跳楼的原因。机械的劳动，无望的未来，很低的薪水，但去了别的地方薪水更低。很高的物价，除了吃得饱和穿得暖以外，别的什么都做不了；而让你吃饱饭还在被当作对世界人类天大的贡献和政绩宣传，还恨不得拿出远古时代的数据和冰川时代的照片来表明，你能吃饱已经要谢天谢地了，你说你能奢望什么。`
++ `在这个大朋友欺负小朋友的游戏里，大朋友们其实应该再想得多一点。他们是脑残么？他们的确脑残。而我想告诉那些小弟弟小妹妹们，每个人都有自己的偶像，甭管他是哪个国家的。等大家长大了以后，有些人觉得自己真有眼光，偶像自己也很争气，你说出自己的偶像时，周围人都觉得你有品，你可以继续粉他，你可以不粉他，但你无悔自己年少的选择。……你觉得人家追韩国明星傻逼，你不一样天天看美剧，千万不要用这种假爱国情操来欺负人家小朋友。`
++ **`而你在最好的时光里离开了，这也是最好的事情。好风光似幻似虚，多一分钟又如何，你丫把它留住了，但我不会输你的。`**
