--- a/docs/05.更多/02.兴趣爱好/02.样/555.收藏夹.md
+++ b/docs/05.更多/02.兴趣爱好/02.样/555.收藏夹.md
@@ -23,6 +23,7 @@ author:
 *  [【大魚海棠】印象曲 － 大鱼 【周深】](https://www.bilibili.com/video/BV1qs411Y7J6?spm_id_from=333.999.0.0)
 *  [【银临】棠梨煎雪 Clozzz吉他指弹谱【古风】](https://www.bilibili.com/video/BV1Bx411k7mG?spm_id_from=333.999.0.0)
 *  [【武士桑】人生的旋转木马『人生のメリーゴーランド』【久石让】](https://www.bilibili.com/video/BV1F7411z7Cu?spm_id_from=333.999.0.0)
+*  [《安和桥》GTP吉他谱（附谱及演示 前奏+间奏+尾奏）](https://www.bilibili.com/video/BV1oJ411T79v/?spm_id_from=autoNext)
   
 
 
