--- a/docs/07.收藏夹/01.推荐/01.收藏夹.md
+++ b/docs/07.收藏夹/01.推荐/01.收藏夹.md
@@ -32,7 +32,15 @@ author:
 *  [北大女硕士求职受挫，回乡当油漆工月薪2000，只因专业没选好？](https://www.163.com/dy/article/GA7B8V1E05425518.html)
 *  [北大女硕士返乡当油漆工 自称这只是一个营生(图)](https://www.chinanews.com.cn/edu/2011/03-08/2890186.shtml)
 *  [如何看待浙江大学博士生送外卖？](https://www.zhihu.com/question/523946815/answer/2411676468)
-*  []()
-*  []()
-*  []()
-
+*  [河南郑州一名 211名校毕业的女硕士二次择业选修脚，如何评价她的这一选择？](https://www.zhihu.com/question/530642145)
+*  [大学生就业这么惨，为什么还要花这么多时间读大学？](https://www.zhihu.com/question/530140476)
+*  [如何看待男生进女生浴室洗澡拍照，上海理工大学回应称「错峰使用，资源利用最大化」？这一安排是否合理？](https://www.zhihu.com/question/530615673)
+*  [名校毕业男子炒股损失 700万流浪 4 年，如何评价其行为？如遇到这类情况该怎样劝说？](https://www.zhihu.com/question/531001974)
+* [如何评价多地清退超龄农民工，从而出现大龄农民工染发、伪装得更年轻去打零工的现象？](https://www.zhihu.com/question/531440955)
+* [全国农民工平均年龄 41.7 岁，50 岁以上农民工近 8000 万，为什么年轻人不再愿意当农民工了？](https://www.zhihu.com/question/531714255)
+* [浙江遂昌县的 24 个工作岗位中入围人员有 4 名博士、19 名硕士，为什么名校硕博都扎堆就业小县城？](https://www.zhihu.com/question/532044942)
+* [南开大学通报「教师被举报一事」，目前 3 名教师均已被处理，其中一人被解聘，如何看待这一处罚结果？](https://www.zhihu.com/question/532639510)
+* [有文章称县城体制内女孩出现了婚恋困局，真实性几何？这是什么原因造成的？](https://www.zhihu.com/question/531940348)
+* [南开大学回应多名教师被实名举报，称「已关注此事，正在调查中」，事件进展如何？](https://www.zhihu.com/question/532128258)
+* [南开大学3名教师被不同女生举报，背后的水有多深？](https://zhuanlan.zhihu.com/p/513119677)
+* [南开大学通报3名教师被举报](https://s.weibo.com/weibo?q=%23%E5%8D%97%E5%BC%80%E5%A4%A7%E5%AD%A6%E9%80%9A%E6%8A%A53%E5%90%8D%E6%95%99%E5%B8%88%E8%A2%AB%E4%B8%BE%E6%8A%A5%23)
