--- a/docs/08.星选集/01.原创/01.星选集.md
+++ b/docs/08.星选集/01.原创/01.星选集.md
@@ -16,6 +16,7 @@ author:
 * [阿里图标库](https://www.iconfont.cn/home/index) 
 * [签到](https://w1.v2dns.xyz/user)
 * [掘金](https://juejin.cn/frontend)
+* [bilibili](https://www.bilibili.com)
 
 
 * [夏达](https://s.weibo.com/weibo?q=%E5%A4%8F%E8%BE%BE) 夏达新浪微博
