--- a/docs/00.目录页/03.技术.md
+++ b/docs/00.目录页/03.技术.md
@@ -3,7 +3,7 @@ pageComponent:
   name: Catalogue
   data:
     key: 03.技术
-    imgUrl: /img/other.png
+    imgUrl: https://cdn.jsdelivr.net/gh/clozz-lin/images@master/blog_index_private/other.png
     description: 技术文档、教程、技巧、总结等文章
 title: 技术
 date: 2020-03-11 21:50:55
