--- a/docs/00.目录页/05.更多.md
+++ b/docs/00.目录页/05.更多.md
@@ -3,7 +3,7 @@ pageComponent:
   name: Catalogue
   data:
     key: 05.更多
-    imgUrl: /img/more.gif
+    imgUrl: https://cdn.jsdelivr.net/gh/clozz-lin/images@master/blog_index_private/more.gif
     description: 
 title: 更多
 date: 2020-03-11 21:50:56
