--- a/docs/04.写过的项目/03.静态页面练习.md
+++ b/docs/04.写过的项目/03.静态页面练习.md
@@ -17,4 +17,171 @@ author:
 
 ### 项目截图
 ![douyin](https://cdn.jsdelivr.net/gh/clozz-lin/images@master/xxx/douyin.png)
-## 2、
+
+## 2、实现两栏布局（左侧固定 + 右侧自适应布局）
+
+### 源码地址
+<https://github.com/clozz-lin/Static_page_practice>
+
+`方法一`：`利用浮动，左边元素宽度固定 ，设置向左浮动。
+      将右边元素的 margin-left 设为固定宽度 。
+      注意，因为右边元素的 width 默认为 auto ，所以会自动撑满父元素。`
+
+```html
+<div class="outer">
+      <div class="left">左侧</div>
+      <div class="right">右侧</div>
+    </div>
+```
+
+```css
+.outer {
+        height: 100px;
+      }
+      .left {
+        float: left;
+        width: 200px;
+        height: 100%;
+        background: lightcoral;
+      }
+      .right {
+        margin-left: 200px;
+        height: 100%;
+        background: lightseagreen;
+      }
+```
+
+`方法二`：`同样利用浮动，左边元素宽度固定 ，设置向左浮动。
+      右侧元素设置 overflow: hidden; 这样右边就触发了 BFC ，
+      BFC 的区域不会与浮动元素发生重叠，所以两侧就不会发生重叠。`
+
+```html
+<div class="outer">
+      <div class="left">左侧</div>
+      <div class="right">右侧</div>
+    </div>
+```
+
+```css
+.outer {
+        height: 100px;
+      }
+      .left {
+        float: left;
+        width: 200px;
+        height: 100%;
+        background: lightcoral;
+      }
+      .right {
+        overflow: auto;
+        height: 100%;
+        background: lightseagreen;
+      }
+```
+
+## 3、实现圣杯布局和双飞翼布局（经典三分栏布局）
+
+### 源码地址
+<https://github.com/clozz-lin/Static_page_practice>
+
+### `圣杯布局和双飞翼布局的目的：`
++ 三栏布局，中间一栏最先加载和渲染。
++ 两侧内容固定，中间内容随着宽度自适应。
++ 一般用于 PC 网页。
+
+### 圣杯布局
+#### 源码
+
+```html
+<div id="container" class="clearfix">
+  <p class="center">我是中间</p>
+  <p class="left">我是左边</p>
+  <p class="right">我是右边</p>
+</div>
+
+```
+
+```css
+#container {
+  padding-left: 200px;
+  padding-right: 150px;
+  overflow: auto;
+}
+#container p {
+  float: left;
+}
+.center {
+  width: 100%;
+  background-color: lightcoral;
+}
+.left {
+  width: 200px;
+  position: relative;
+  left: -200px;
+  margin-left: -100%;
+  background-color: lightcyan;
+}
+.right {
+  width: 150px;
+  margin-right: -150px;
+  background-color: lightgreen;
+}
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+```
+
+#### `效果截图：`
+
+![shengbeibuju](https://cdn.jsdelivr.net/gh/clozz-lin/images@master/shengbei_shuangfeiyi_bujv/shengbeibuju.png)
+
+### 双飞翼布局
+#### 源码
+
+```html
+<div id="main" class="float">
+  <div id="main-wrap">main</div>
+</div>
+<div id="left" class="float">left</div>
+<div id="right" class="float">right</div>
+
+```
+
+```css
+.float {
+  float: left;
+}
+#main {
+  width: 100%;
+  height: 200px;
+  background-color: lightpink;
+}
+#main-wrap {
+  margin: 0 190px 0 190px;
+}
+#left {
+  width: 190px;
+  height: 200px;
+  background-color: lightsalmon;
+  margin-left: -100%;
+}
+#right {
+  width: 190px;
+  height: 200px;
+  background-color: lightskyblue;
+  margin-left: -190px;
+}
+
+```
+
+#### `效果截图：`
+
+![shuangfeiyibuju](https://cdn.jsdelivr.net/gh/clozz-lin/images@master/shengbei_shuangfeiyi_bujv/shuangfeiyibuju.png)
+
+### `圣杯布局和双飞翼布局总结：`
++ 使用 `float`  布局。
++ 两侧使用 `margin` 负值，以便和中间内容横向重叠。
++ 防止中间内容被两侧覆盖，圣杯布局用 `padding` ，双飞翼布局用 `margin` 。
