--- a/docs/01.前端/01.推荐/01.Js.md
+++ b/docs/01.前端/01.推荐/01.Js.md
@@ -11,7 +11,7 @@ permalink: /pages/898cb9/
 article: false
 comment: false
 editLink: false
-titleTag: 原创
+titleTag: 
 author:
   name: cl
   link: https://github.com/clozz-lin
