--- a/docs/01.前端/01.推荐/02.ES6.md
+++ b/docs/01.前端/01.推荐/02.ES6.md
@@ -11,7 +11,7 @@ permalink: /note/es6555/
 article: false
 comment: false
 editLink: false
-titleTag: 原创
+titleTag: 
 author:
   name: cl
   link: https://github.com/clozz-lin
