--- a/docs/01.前端/02.转载/00.《JavaScript教程》笔记.md
+++ b/docs/01.前端/02.转载/00.《JavaScript教程》笔记.md
@@ -11,7 +11,7 @@ permalink: /note/javascript/
 article: false
 comment: false
 editLink: false
-titleTag: 转载
+titleTag: 
 author:
   name: xugaoyi
   link: https://github.com/xugaoyi
