--- a/docs/01.前端/02.转载/10.《ES6 教程》笔记.md
+++ b/docs/01.前端/02.转载/10.《ES6 教程》笔记.md
@@ -11,7 +11,7 @@ permalink: /note/es6/
 article: false
 comment: false
 editLink: false
-titleTag: 转载
+titleTag: 
 author:
   name: xugaoyi
   link: https://github.com/xugaoyi
